--- a/dephault.css
+++ b/dephault.css
@@ -31,3 +31,10 @@ a {
     color: var(--valid);
     text-decoration: none;
 }
+
+.button {
+    background: var(--background-color-second);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px -2px 2px rgba(0, 0, 0, 0.25);
+    border-radius: 2vw;
+    border: 0;
+}
