--- a/register.css
+++ b/register.css
@@ -9,13 +9,22 @@
 
 #register {
     width: 50%;
-    height: 60%;
+    height: 70%;
     background-color: var(--background-color-second);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     border-radius: 5vw;
+}
+
+#register form {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
 
 #register p {
@@ -67,7 +76,7 @@
 }
 
 #register .button {
-    width: 10%;
+    width: 15%;
     height: 10%;
     color: #fff;
     font-weight: 700;
