--- a/register.css
+++ b/register.css
@@ -76,12 +76,23 @@
 }
 
 #register .button {
-    width: 15%;
+    width: 20%;
     height: 10%;
     color: #fff;
     font-weight: 700;
     font-family: 'Quicksand';
-    font-size: 1.5vw;
+    font-size: 1.3vw;
+    transition: all 0.5s;
+}
+
+#register .button:hover {
+    background-color: var(--background-color-third);
+    box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.5);
+}
+
+#register .button:active {
+    background-color: var(--background-color-third);
+    box-shadow: inset 0px 4px 2px rgba(0, 0, 0, 0.5);
 }
 
 .return_panel {
