--- a/dephault.css
+++ b/dephault.css
@@ -3,12 +3,15 @@
     --background-color: #24282B;
     --background-color-second: #2E3438;
     --background-color-third: #24282B;
+    --background-color-white: #6b6b6b;
     --valid: #6fd057;
     --unvalid: #BD3535;
     --text-color: #FFFFFF;
     --statue-getting: #494949;
     --statue-online: #6fd057;
     --statue-offline: #BD3535;
+    --face-icon: url(../ressources/img/icon/emoji.svg);
+    --leave-icon: url(../ressources/img/icon/leave.svg);
 }
 
 body {
@@ -40,4 +43,9 @@ a {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px -2px 2px rgba(0, 0, 0, 0.25);
     border-radius: 2vw;
     border: 0;
+}
+
+#page {
+    width: 100vw;
+    height: 82vh;
 }
