--- a/menu.css
+++ b/menu.css
@@ -118,23 +118,120 @@ header .content #connect {
     display: block;
     width: 20%;
     height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
 }
 
-header .content #connect .icon {
+header .content #connect .content {
+    position: relative;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header .content #connect .content .icon {
     background-image: url(../ressources/img/icon/user.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     height: 5vh;
     width: 5vh;
+    margin-right: 0.7vw;
     cursor: pointer;
 }
 
-header .content #connect p {
+header .content #connect .content p {
     font-weight: 700;
     font-size: 1.5vw;
     cursor: pointer;
+}
+
+header .content #connect .dropdown {
+    display: none;
+}
+
+header .content #connect .dropdown-close {
+    margin-top: 5px;
+    background-color: var(--background-color-white);
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    height: 0;
+}
+
+header .content #connect .dropdown-close div {
+    display: none;
+}
+
+header .content #connect .dropdown-open {
+    margin-top: 5px;
+    background-color: var(--background-color-white);
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+}
+
+header .content #connect .dropdown-open div {
+    height: 6vh;
+    display: block;
+    text-align: center;
+    cursor: pointer;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    -webkit-transform: scale(0.90);
+    transition: background-color 0.5s;
+    transition: transform 0.2s;
+}
+
+header .content #connect .dropdown-open div:nth-child(1):hover {
+    border-radius: 10px 10px 0 0;
+}
+
+header .content #connect .dropdown-open div:last-child:hover {
+    border-radius: 0 0 10px 10px;
+}
+
+header .content #connect .dropdown-open div:hover {
+    -webkit-transform: scale(1);
+    background-color: var(--background-color-second);
+    overflow-x: hidden;
+}
+
+header .content #connect .dropdown-open div span[class="icon"] {
+    width: 2.3vw;
+    height: 2.3vw;
+    transform: translateX(10px);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+header .content #connect .dropdown-open div a {
+    font-weight: 600;
+    font-size: 1.5vw;
+    color: var(--text-color);
+    margin-left: 2vw;
+}
+
+@keyframes openUserDropdownAnim {
+    0% {
+        transform: scale(0, .025);
+    }
+    50% {
+        transform: scale(1, .025);
+    }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+    .dropdown-open {
+        animation-name: openUserDropdownAnim;
+        animation-duration: 0.3s;
+        animation-iteration-count: 1;
+    }
 }
