--- a/ressources/module/push/push-style.css
+++ b/ressources/module/push/push-style.css
@@ -98,6 +98,7 @@
 #push-closing p, #push p {
     font-size: 1.5vw;
     font-weight: 500;
+    white-space: nowrap;
 }
 
 #push-closing p strong, #push p strong {
