--- a/my-account.css
+++ b/my-account.css
@@ -6,7 +6,7 @@
 
 #page #Account {
     width: 60%;
-    height: 80vh;
+    min-height: 80vh;
     border-radius: 20px;
     background-color: var(--background-color-second);
     display: flex;
@@ -14,20 +14,324 @@
     align-items: center;
 }
 
-#page #Account .profile-picture {
+#page #Account #profile-picture[class="normal"] {
     margin-top: 2vh;
     width: 10vw;
     height: 10vw;
+    transition: all 0.5s;
+}
+
+#page #Account #profile-picture[class="normal"] #picture-tool {
+    display: none;
+}
+
+#page #Account #profile-picture[class="edit"] {
+    margin-top: 2vh;
+    width: 15vw;
+    height: 15vw;
+    transition: all 0.5s;
+}
+
+#page #Account #profile-picture[class="edit"] #picture {
+    width: 100%;
+    height: 100%;
+    border-radius: 40%;
     border: 5px solid var(--text-color);
-    border-radius: 45%;
     background-image: url(../ressources/img/icon/user.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: 7.5vw;
 }
 
+#page #Account #profile-picture[class="edit"] #picture-tool {
+    background-color: var(--background-color-white);
+    width: 4vw;
+    height: 25vh;
+    position: relative;
+    margin-top: -95%;
+    margin-left: -5vw;
+    border-radius: 10px;
+    z-index: 2;
+    animation: fadeInPicturTool 0.5s;
+}
+
+@keyframes fadeInPicturTool {
+    0% {
+        width: 0;
+        margin-left: 0;
+    }
+}
+
+@keyframes fadeInPicturToolArrow {
+    0% {
+        width: 0;
+        height: 0;
+        opacity: 0;
+    }
+    30% {
+        opacity: 0;
+        width: 0;
+        height: 0;
+        margin-left: -3vw;
+    }
+}
+
+#page #Account #profile-picture[class="edit"] #ptool-arrow {
+    width: 20px;
+    height: 20px;
+    z-index: 1;
+    background-color: var(--background-color-white);
+    position: relative;
+    margin-top: -50%;
+    margin-left: -2.6vw;
+    border-radius: 10px;
+    border: 8px solid;
+    border-color: var(--background-color-white) var(--background-color-white) transparent transparent;
+    transform: rotate(45deg);
+    animation: fadeInPicturToolArrow 1.5s;
+}
+
+input[type="file"] {
+    display: none;
+}
+
+#page #Account #profile-picture[class="edit"] #picture-tool .ptool-button {
+    width: 100%;
+    height: 25%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 2.5vw;
+    transition: all 0.25s;
+    transform: scale(0.9);
+    cursor: pointer;
+}
+
+#page #Account #profile-picture[class="edit"] #picture-tool .ptool-upload-label {
+    display: block;
+    width: 100%;
+    height: 25%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 2.5vw;
+    transition: all 0.25s;
+    transform: scale(0.9);
+    cursor: pointer;
+}
+
+#page #Account #profile-picture[class="edit"] #picture-tool .ptool-upload-label:hover{
+    background-color: var(--valid);
+    transform: scale(1);
+}
+
+#page #Account #profile-picture[class="edit"] #picture-tool .ptool-button:nth-child(1) {
+    border-radius: 10px 10px 0 0;
+}
+
+#page #Account #profile-picture[class="edit"] #picture-tool .ptool-button:nth-child(1):hover {
+    background-color: var(--blue);
+}
+
+#page #Account #profile-picture[class="edit"] #picture-tool .ptool-button:last-child {
+    border-radius: 0 0 10px 10px;
+}
+
+#page #Account #profile-picture[class="edit"] #picture-tool .ptool-button:last-child:hover {
+    background-color: var(--unvalid);
+}
+
+#page #Account #profile-picture[class="edit"] #picture-tool .ptool-button:hover {
+    background-color: var(--valid);
+    transform: scale(1);
+}
+#page #Account #profile-picture[class="edit"] #picture-tool .ptool-upload-label .ptool-text,
+#page #Account #profile-picture[class="edit"] #picture-tool .ptool-button .ptool-text {
+    display: block;
+    background-color: var(--background-color);
+    border-radius: 10px;
+    min-width: 250%;
+    height: 100%;
+    position: relative;
+    left: -260%;
+    white-space: nowrap;
+    opacity: 0%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#page #Account #profile-picture[class="edit"] #picture-tool .ptool-button[id="ptool-mcSet"] .ptool-text {
+    height: 120%;
+}
+#page #Account #profile-picture[class="edit"] #picture-tool .ptool-button[id="ptool-mcSet"] .ptool-text p {
+    margin-top: -10px;
+}
+#page #Account #profile-picture[class="edit"] #picture-tool .ptool-upload-label .ptool-text p,
+#page #Account #profile-picture[class="edit"] #picture-tool .ptool-button .ptool-text p {
+    font-weight: 600;
+    font-size: 1vw;
+}
+#page #Account #profile-picture[class="edit"] #picture-tool .ptool-upload-label:hover .ptool-text,
+#page #Account #profile-picture[class="edit"] #picture-tool .ptool-button:hover .ptool-text {
+    opacity: 100%;
+}
+#page #Account #profile-picture[class="edit"] #picture-tool .ptool-button .ptool-text #ptool-text-input-container {
+    display: none;
+    margin-top: 10px;
+}
+#page #Account #profile-picture[class="edit"] #picture-tool .ptool-button:hover .ptool-text #ptool-text-input-container {
+    width: 100%;
+    height: auto;
+    margin-top: -15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+#page #Account #profile-picture[class="edit"] #picture-tool .ptool-button:hover .ptool-text #ptool-text-input-container input {
+    width: 80%;
+    background-color: #fff;
+    border: 1 solid #fff;
+    border-radius: 10px;
+    border-style: solid;
+}
+
+#page #Account #profile-picture[class="edit"] #picture-tool .ptool-button:hover .ptool-text #ptool-text-input-container #ptool-text-input-closebutton {
+    width: 1vw;
+    height: 1vw;
+    background-image: url(../ressources/img/icon/arrow_right.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: all 0.5s;
+}
+#page #Account #profile-picture[class="edit"] #picture-tool .ptool-button:hover .ptool-text #ptool-text-input-container #ptool-text-input-closebutton:hover {
+    transform: scale(1.5);
+}
+
+#page #Account #profile-picture[class="normal"] #picture {
+    width: 100%;
+    height: 100%;
+    border-radius: 40%;
+    border: 5px solid var(--text-color);
+    background-image: url(../ressources/img/icon/user.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    
+}
+
+#page #Account #profile-picture[class="normal"]:hover {
+    transform: scale(1.1);
+}
+
+#page #Account #profile-picture[class="normal"]:hover #picture {
+    margin-top: -106%;
+}
+
+#page #Account #profile-picture[class="normal"]:hover #picture-edit {
+    background-color: #00000068;
+    background-image: url(../ressources/img/icon/edit.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 4.8vw;
+    width: 106%;
+    height: 106%;
+    position: relative;
+    top: 0;
+    left: 0;
+    border-radius: 40%;
+}
+
 #page #Account .title {
     font-size: 2.2vw;
     font-weight: 700;
     margin-top: 5px;
+}
+
+#page #Account .infos {
+    background-color: var(--background-color);
+    width: 95%;
+    height: 57%;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#page #Account .infos .content {
+    width: 100%;
+    height: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: 20px 0 20px 0;
+}
+
+#page #Account .infos .info {
+    background-color: var(--background-color-second);
+    width: 45%;
+    height: 70%;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#page #Account .infos .info .i-title {
+    font-weight: 600;
+    font-size: 1.5vw;
+    margin-left: 10px;
+}
+
+#page #Account .infos .info .value {
+    font-weight: 500;
+    font-size: 1.3vw;
+}
+
+#page #Account .infos .info .i-edit-icon {
+    background-color: var(--background-color-white);
+    background-image: var(--edit-icon);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 2vw;
+    height: 100%;
+    width: 15%;
+    border-radius: 0 20px 20px 0;
+    transition: all 0.5s;
+    float: left;
+}
+
+#page #Account .infos .info .i-edit-icon:hover {
+    transform: translateX(10px);
+    background-color: var(--valid);
+}
+
+/*---------------------------------------------------*/
+#page #Account .action-container {
+    margin-top: 7vh;
+    width: 100%;
+    height: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#page #Account .action-container #delete-button{
+    width: 25%;
+    background-color: #dc110129;
+    border: 2px solid #f10606cf;
+    box-shadow: 0px 0px 2px #ff0303;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+#page #Account .action-container #delete-button p{
+    text-align: center;
+    font-weight: 600;
+    transition: all 0.5s;
+}
+#page #Account .action-container #delete-button:hover{
+    transform: scale(0.9);
+}
+#page #Account .action-container #delete-button:hover p{
+    color: red;
 }
