--- a/dephault.css
+++ b/dephault.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 .theme-dark {
     --background-color: #24282B;
-    --background-color-second: #2E3438;
+    --background-color-second: #2e3438;
+    --background-color-second-white: #495156;
     --background-color-third: #18191b;
     --background-color-white: #777777;
     --valid: #6fd057;
@@ -16,6 +17,7 @@
     --leave-icon: url(../ressources/img/icon/leave.svg);
     --edit-icon: url(../ressources/img/icon/edit.svg);
     --close-icon: url(../ressources/img/icon/close.svg);
+    --profile-favorite: url(../ressources/img/icon/profile_favorite.svg)
 }
 
 body {
@@ -68,7 +70,6 @@ a {
 }
 
 .loader {
-
     border: 16px solid var(--background-color-second);
     border-top: 16px solid var(--purple);
     border-radius: 50%;
