--- a/index.css
+++ b/index.css
@@ -21,6 +21,148 @@
     font-size: 2vw;
 }
 
+.play-container {
+    width: 100%;
+    height: 30vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.play-container p {
+    font-size: 3vw;
+    font-weight: 600;
+}
+
+.play-container .play-button-container {
+    width: 30%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.play-container .play-button-container .button {
+    height: 7vh;
+    width: 45%;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+
+.play-container .play-button-container .button:hover {
+    transform: scale(1.1);
+}
+
+.play-container .play-button-container .button p {
+    font-size: 2vw;
+}
+
+.play-container .play-button-container .button[id="play"] {
+    background-color: var(--valid);
+}
+
+.play-container .play-button-container .button[id="discord"] {
+    background-color: var(--discord);
+}
+
+.play-container .play-button-container .button[id="discord"] .discord-icon {
+    width: 3vw;
+    height: 3vw;
+    background-image: url(../ressources/img/icon/discord.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-right: 10px;
+}
+
+#ip-panel[class="hide"] {
+    display: none;
+}
+
+#ip-panel[class="show"] {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: var(--background-color-transparent);
+    z-index: 500;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    animation: panelOpen 1s;
+}
+#ip-panel[class="show"] #link {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 501;
+    
+}
+
+#ip-panel[class="show"] #link .cross {
+    background-image: url(../ressources/img/icon/close.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 3vw;
+    height: 3vw;
+    position: relative;
+    top: 5vh;
+    left: 90%;
+    transition: all 0.5s;
+}
+
+#ip-panel[class="show"] #link .cross:hover {
+    transform: scale(1.1);
+}
+
+#ip-panel[class="show"] .container {
+    width: 60%;
+    height: 60%;
+    background: var(--background-color-second);
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 502;
+    animation: panelOpenContent 1s;
+}
+
+#ip-panel[class="show"] .container .title {
+    font-size: 3vw;
+    margin-top: 10px;
+    font-weight: 600;
+}
+
+#ip-panel[class="show"] .container .img-container {
+    margin-top: -5vh;
+    width: 85%;
+    height: 80%;
+}
+
+#ip-panel[class="show"] .container .img-container .img {
+    background-image: url(../ressources/img/add-server.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+}
+
+#ip-panel[class="show"] .container .img-container .ip {
+    position: relative;
+    top: -30vh;
+    left: 30%;
+    font-weight: 700;
+    cursor: pointer;
+}
+
 .island {
     width: 100%;
     height: 80vh;
@@ -28,15 +170,31 @@
     align-items: center;
     justify-content: space-around;
 }
+
 .island p {
     font-size: 1.5vw;
 }
+
 .island #island {
     height: 100%;
     width: 40%;
     margin-left: 30px;
-    
 }
+
 .island #island canvas {
     margin-top: -60px;
+}
+
+@keyframes panelOpen {
+    0%{
+        opacity: 0%;
+    }
+
+}
+
+@keyframes panelOpenContent {
+    0%{
+        margin-left: -100vw;
+    }
+
 }
