--- a/menu.css
+++ b/menu.css
@@ -5,6 +5,8 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
+    z-index: 50;
 }
 
 header .title {
