Add Notification System

--- a/dephault.css
+++ b/dephault.css
@@ -12,6 +12,7 @@
     --statue-getting: #494949;
     --statue-online: #6fd057;
     --statue-offline: #BD3535;
+    --red: #c20f1e;
     --purple: #8d10d0;
     --blue: #1a31c9;
     --discord: #5966F2;
